@@ -1,7 +1,7 @@
 package de.mpmediasoft.jfxtools.skiafx;
 
-import java.lang.foreign.MemorySegment; // new
-//import jdk.incubator.foreign.MemorySegment; // old
+//import java.lang.foreign.MemorySegment; // new
+import jdk.incubator.foreign.MemorySegment; // old
 
 import java.lang.reflect.Field;
 import java.nio.Buffer;
@@ -31,7 +31,7 @@ public class SkiaSurfaceFX {
     
     // Uses the "Foreign Memory Access API" introduced in Java 14.
     // Needs --add-modules=jdk.incubator.foreign on the command line if set to true!
-    private final static boolean AVOID_ILLEGAL_REFLECTION = false;
+    private final static boolean AVOID_ILLEGAL_REFLECTION = true;
     
     public static interface RenderCallback extends Callback<Canvas,Rectangle2D> {}
     
@@ -111,8 +111,8 @@ public class SkiaSurfaceFX {
     
     private final long getBufferPointer(ByteBuffer byteBuffer) throws Exception {
         if (AVOID_ILLEGAL_REFLECTION) {
-//          return MemorySegment.ofByteBuffer(byteBuffer).address().toRawLongValue();   // old
-            return MemorySegment.ofBuffer(byteBuffer).address().toRawLongValue();       // new
+          return MemorySegment.ofByteBuffer(byteBuffer).address().toRawLongValue();   // old
+//            return MemorySegment.ofBuffer(byteBuffer).address().toRawLongValue();       // new
         } else {        
             Field address = Buffer.class.getDeclaredField("address");
             address.setAccessible(true);
